# Cashback-App

./: .gitignore  LICENSE  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: cashback_log.py  schemas.py
backend/app/routes/: cashback.py
backend/app/services/: cashback_service.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
